--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <!-- <h1 class="jacktus">+ Music Producer</h1> -->
 
                     <p class="hero-intro">
-                        Frontend developer with nearly 5 years of experience, specializing in building high-performance, <span>SEO-optimized</span>, <span>responsive websites</span> with animations using <span>GSAP</span> and <span>Motion One</span>. Proficient in CMS platforms <span>(WordPress, Webflow, OctoberCMS)</span>, <span>web analytics</span>, and <span>accessibility</span> to improve user experience
+                        Frontend developer with nearly 5 years of experience, specializing in building high-performance, <span>SEO-optimized</span>, <span>responsive websites</span> with animations using <span>GSAP</span> and <span>Motion One</span>. Proficient in CMS platforms <span>(WordPress, Webflow, OctoberCMS)</span> <span>web analytics</span>, and <span>accessibility</span> to improve user experience.
                     </p>
                     <!-- <h5>
                         <span class="mama">Lorem ipsum dolor sit amet consectetur adipisicing elit</span>
@@ -101,10 +101,10 @@
         <section class="introduction container-fluid">
             <div class="introduction-wrapper">
                 <div class="row">
-                    <div class="flex-col">
+                    <div class="flex-col mid-liner-wrapper">
                         <h4 class="montigo">Helping brands shine in the digital world. I'll go get my <a href="https://shopmontigo.com/" target="_blank"><u>Montigo</u><sup style="font-size: 18px; font-weight: 700; vertical-align: super;">TM</sup></a> and together, we'll set new standards. Clear and always up-to-date.</h4>
                     </div>
-                    <div class="flex-col">
+                    <div class="flex-col skills-wrapper">
                         <h2>Skills</h2>
                         <div class="skills-box">
                             <span>HTML</span>
@@ -155,7 +155,7 @@
 
                 <div class="row">
                     <div class="col-12 col-md-3">
-                        <h2>Featured <span>works</span></h2>
+                        <h2 class="works-wrapper-title">Featured <span>works</span></h2>
                     </div>
                     <div class="col-12 col-md-9 position-relative">
 
@@ -313,7 +313,7 @@
                     <div class="email-wrapper">
                         <p class="say-hi">Say hi:</p>
                         <h2 class="footer-email">syedzaquan@gmail.com</h2>
-                        <h3>(+60) 13 990 1824</h3>
+                        <a href="tel:+60139901824" class="contact-number">(+60) 13 990 1824</a>
                         <div class="footer-cta-wrapper">
                             <a href="#" class="footer-cta"><i class="fa-solid fa-seal"></i> LinkedIn</a>
                             <a href="#" class="footer-cta"><i class="fa-solid fa-seal"></i> Resume</a>
