Favicon added, links added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@syedzaquan</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -311,12 +312,12 @@
             <div class="footer-container">
                 <div class="footer-wrapper">
                     <div class="email-wrapper">
-                        <p class="say-hi">Say hi:</p>
-                        <h2 class="footer-email">syedzaquan@gmail.com</h2>
+                        <p class="say-hi">Say hello:</p>
+                        <a href="mailto:syedzaquan@gmail.com" class="footer-email">syedzaquan@gmail.com</a>
                         <a href="tel:+60139901824" class="contact-number">(+60) 13 990 1824</a>
                         <div class="footer-cta-wrapper">
-                            <a href="#" class="footer-cta"><i class="fa-solid fa-seal"></i> LinkedIn</a>
-                            <a href="#" class="footer-cta"><i class="fa-solid fa-seal"></i> Resume</a>
+                            <a href="https://www.linkedin.com/in/syedzaquan/" target="_blank" class="footer-cta"><i class="fa-solid fa-seal"></i> LinkedIn</a>
+                            <a href="assets/document/syed-zaquan-resume.pdf" target="_blank" class="footer-cta"><i class="fa-solid fa-seal"></i> Resume</a>
                         </div>
                     </div>
                     <div class="copyright-wrapper">
