--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="@syedzaquan" />
+    <meta property="og:description" content="Me, myself, I and my laptop." />
+    <meta property="og:image" content="" />
     <title>@syedzaquan</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 
@@ -289,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- <div class="footer-sticky">
                 <div class="footer-container">
                     <div class="footer-wrapper">
@@ -306,7 +309,7 @@
             </div> -->
         </section>
 
-        
+
 
         <section class="footer-sticky">
             <div class="footer-container">
