--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                     <div><i class="fa-solid fa-seal"></i></div>
                 </div>
                 <div class="rolling-text-item">
+                    <h3>Dynamic Web Content</h3>
+                </div>
+                <div class="rolling-text-item scrolling-dots">
+                    <div><i class="fa-solid fa-seal"></i></div>
+                </div>
+                <div class="rolling-text-item">
                     <h3>Accessibility</h3>
                 </div>
                 <div class="rolling-text-item scrolling-dots">
@@ -121,7 +127,8 @@
                             <span>Sass/Scss</span>
                             <span>Bootstrap</span>
                             <span>TailwindCSS</span>
-                            <span>OctoberCMS</span>
+                            <span>OctoberCMS (Headless)</span>
+                            <span>Twig</span>
                             <span>Wordpress</span>
                             <span>Webflow</span>
                             <span>Shopify</span>
