Responsive update and skills update

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <span>React.js</span>
                             <span>jQuery</span>
                             <span>AJAX</span>
-                            <span>GSAP</span>
+                            <span>Greensock (GSAP)</span>
                             <span>Sass/Scss</span>
                             <span>Bootstrap</span>
                             <span>TailwindCSS</span>
@@ -154,6 +154,9 @@
                             <span>ThreeJS</span>
                             <span>A-Frame</span>
                             <span>WebAR</span>
+                            <span>Adobe Photoshop</span>
+                            <span>Adobe Illustrator</span>
+                            <span>Adobe Premiere Pro</span>
                         </div>
 
                     </div>
