Added version to css and js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome/sharp-solid.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css?v=1.0.1">
 </head>
 
 <body class="loading">
@@ -363,23 +363,7 @@
     <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
     <!-- <script src="assets/js/cursor.js"></script> -->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js?v=1.0.1"></script>
 </body>
 
 </html>
-
-<!-- <p>
-    Build a website using html, css, and javascript in collaboration with backend developer and designer. Grow day by day with new trends and technology. Pickup new skills/framework such as bootstrap, css preprocessor(scss/sass/less), and tailwind. Implement animation with GSAP and motion one animation library.
-
-    Executed website scans using google page speed and google lighthouse to identify and gauge the site performance, SEO, and accessibility. 
-    
-    Worked on accessibility initiative to improve accessibility score by following best practices and guided by WCAG criteria.
-
-    Perform an integration with CMS (OctoberCMS) via Javascript API to the backend.
-
-    Collaborate with designer to implement responsive design and website animation without affecting UI/UX principles.
-
-    Integrate third party analytics tools like Google Analytics and Tag Manager to monitor on the site data and user journey/behavior throughout the website.
-
-    Involved in hiring pipeline: Resume review, interviewing candidates and evaluating tech assessment
-</p> -->
