--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome/sharp-solid.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
 
-    <link rel="stylesheet" href="assets/css/style.css?v=1.0.1">
+    <link rel="preload" href="assets/css/style.css?v=1.0.2" as="style">
 </head>
 
 <body class="loading">
@@ -363,7 +363,7 @@
     <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
     <!-- <script src="assets/js/cursor.js"></script> -->
-    <script src="assets/js/script.js?v=1.0.1"></script>
+    <script src="assets/js/script.js?v=1.0.2" defer></script>
 </body>
 
 </html>
