--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome/sharp-solid.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
 
-    <link rel="preload" href="assets/css/style.css?v=1.0.2" as="style">
+    <link rel="stylesheet" href="assets/css/style.css?v=1.0.2">
 </head>
 
 <body class="loading">
