Fix minor issue

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome/sharp-solid.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
 
-    <link rel="stylesheet" href="assets/css/style.css?v=1.0.2">
+    <link rel="stylesheet" href="assets/css/style.css?v=1.0.3">
 </head>
 
 <body class="loading">
@@ -65,46 +65,28 @@
         <section class="rolling-text">
             <div class="rolling-text-wrapper">
                 <div class="rolling-text-item">
-                    <h3>Responsive Designs</h3>
-                </div>
-                <div class="rolling-text-item scrolling-dots">
-                    <div><i class="fa-solid fa-seal"></i></div>
+                    <h3>Responsive Designs <i class="fa-solid fa-seal"></i></h3>
                 </div>
                 <div class="rolling-text-item">
-                    <h3>Dynamic Web Content</h3>
+                    <h3>Dynamic Web Content <i class="fa-solid fa-seal"></i></h3>
                 </div>
-                <div class="rolling-text-item scrolling-dots">
+                <!-- <div class="rolling-text-item scrolling-dots">
                     <div><i class="fa-solid fa-seal"></i></div>
+                </div> -->
+                <div class="rolling-text-item">
+                    <h3>Accessibility <i class="fa-solid fa-seal"></i></h3>
                 </div>
                 <div class="rolling-text-item">
-                    <h3>Accessibility</h3>
-                </div>
-                <div class="rolling-text-item scrolling-dots">
-                    <div><i class="fa-solid fa-seal"></i></div>
+                    <h3>UI/UX Principles <i class="fa-solid fa-seal"></i></h3>
                 </div>
                 <div class="rolling-text-item">
-                    <h3>UI/UX Principles</h3>
-                </div>
-                <div class="rolling-text-item scrolling-dots">
-                    <div><i class="fa-solid fa-seal"></i></div>
+                    <h3>CSS/JS Animation <i class="fa-solid fa-seal"></i></h3>
                 </div>
                 <div class="rolling-text-item">
-                    <h3>CSS/JS Animation</h3>
-                </div>
-                <div class="rolling-text-item scrolling-dots">
-                    <div><i class="fa-solid fa-seal"></i></div>
+                    <h3>SEO <i class="fa-solid fa-seal"></i></h3>
                 </div>
                 <div class="rolling-text-item">
-                    <h3>SEO</h3>
-                </div>
-                <div class="rolling-text-item scrolling-dots">
-                    <div><i class="fa-solid fa-seal"></i></div>
-                </div>
-                <div class="rolling-text-item">
-                    <h3>Social AR Development</h3>
-                </div>
-                <div class="rolling-text-item scrolling-dots">
-                    <div><i class="fa-solid fa-seal"></i></div>
+                    <h3>Social AR Development <i class="fa-solid fa-seal"></i></h3>
                 </div>
             </div>
         </section>
@@ -363,7 +345,7 @@
     <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
     <!-- <script src="assets/js/cursor.js"></script> -->
-    <script src="assets/js/script.js?v=1.0.2" defer></script>
+    <script src="assets/js/script.js?v=1.0.3" defer></script>
 </body>
 
 </html>
