--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                             <span>Bootstrap</span>
                             <span>TailwindCSS</span>
                             <span>OctoberCMS (Headless)</span>
+                            <span>PHP</span>
                             <span>Twig</span>
                             <span>Wordpress</span>
                             <span>Webflow</span>
